# summarize-videos

./: .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml
backend/: pyproject.toml
backend/app/: data.json  data_manager.py  main.py
backend/app/api/: video_summary.py
backend/tests/: test_data_manager.py
frontend/app/: index.html  main.js  summary.html  summary.js
frontend/app/css/: style.css  styles.css
frontend/app/js/: index.js  summary.js
